<resources>
    <string name="app_name">Cemu</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="game_icon">Game Icon</string>
    <string name="select_controller">Select controller</string>
    <string name="controller_s_settings">Controller\'s settings</string>
    <string name="emulated_controller">Emulated controller</string>
    <string name="clear_inputs">Clear</string>
    <string name="disabled">Disabled</string>
    <string name="vpad_controller">Wii U GamePad</string>
    <string name="pro_controller">Wii U Pro Controller</string>
    <string name="wiimote_controller">Wiimote</string>
    <string name="classic_controller">Wii U Classic Controller</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_l">L</string>
    <string name="button_r">R</string>
    <string name="button_zl">ZL</string>
    <string name="button_zr">ZR</string>
    <string name="button_plus">Plus</string>
    <string name="button_minus">Minus</string>
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_stickl">Click</string>
    <string name="button_stickl_up">Up</string>
    <string name="button_stickl_down">Down</string>
    <string name="button_stickl_left">Left</string>
    <string name="button_stickl_right">Right</string>
    <string name="button_stickr">Click</string>
    <string name="button_stickr_up">Up</string>
    <string name="button_stickr_down">Down</string>
    <string name="button_stickr_left">Left</string>
    <string name="button_stickr_right">Right</string>
    <string name="button_mic">Blow Mic</string>
    <string name="button_screen">Show Screen</string>
    <string name="button_home">Home</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_nunchuck_z">Z</string>
    <string name="button_nunchuck_c">C</string>
    <string name="button_nunchuck_up">Up</string>
    <string name="button_nunchuck_down">Down</string>
    <string name="button_nunchuck_left">Left</string>
    <string name="button_nunchuck_right">Right</string>
    <string name="inputBindingDialogTitle">Input binding</string>
    <string name="inputBindingDialogMessage">Trigger an input to bind it to %1$s</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="controller_numbered">Controller %1d</string>
    <string name="input_settings">Input Settings</string>
    <string name="emulated_controller_label">Emulated controller</string>
    <string name="emulated_controller_with_type">Emulated controller: %1s</string>
    <string name="exit_confirm_message">Are you sure you want to exit?</string>
    <string name="exit_confirmation_title">Exit Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="buttons">Buttons</string>
    <string name="d_pad">D-Pad</string>
    <string name="left_axis">Left Axis</string>
    <string name="right_axis">Right Axis</string>
    <string name="extra">Extra</string>
    <string name="nunchuck">Nunchuck</string>
    <string name="games_folder_description">Add a game path to scan for games displayed in the game list</string>
    <string name="games_folder_empty">No games folder selected</string>
    <string name="options">Options</string>
    <string name="emulated_controller_selection_description">Selected controller: %1s</string>
    <string name="async_shader_compile">Async shader compile</string>
    <string name="async_shader_compile_description">Enables async shader and pipeline compilation. Reduces stutter at the cost of objects not rendering for a short time</string>
    <string name="graphics_settings">Graphics settings</string>
    <string name="off">Off</string>
    <string name="double_buffering">Double buffering</string>
    <string name="triple_buffering">Triple buffering</string>
    <string name="vsync">VSync</string>
    <string name="accurate_barriers">Accurate barriers</string>
    <string name="accurate_barriers_description">Disabling the accurate barriers option will lead to flickering graphics but may improve performance. It is highly recommended to leave it turned on</string>
    <string name="tv">TV</string>
    <string name="tv_audio_description">Enable audio output for the Wii U TV</string>
    <string name="gamepad">Gamepad</string>
    <string name="gamepad_audio_description">Enable audio output for the Wii U Gamepad</string>
    <string name="audio_settings">Audio settings</string>
    <string name="mono">Mono</string>
    <string name="stereo">Stereo</string>
    <string name="surround">Surround</string>
    <string name="tv_channels">TV channels</string>
    <string name="gamepad_channels">Gamepad channels</string>
    <string name="tv_volume">TV volume</string>
    <string name="pad_volume">Gamepad volume</string>
    <string name="search_games">Search games</string>
    <string name="no_games_found">No games were found</string>
    <string name="graphic_packs">Graphic packs</string>
    <string name="download_graphic_packs_description">Download latest community graphic packs</string>
    <string name="download_graphic_packs_title">Download graphic packs</string>
    <string name="search_graphic_packs_title">Search</string>
    <string name="checking_version_download_text">Checking version</string>
    <string name="graphic_packs_download_text">Downloading graphic packs</string>
    <string name="download_graphic_packs_error_text">Failed to download graphic packs</string>
    <string name="download_graphic_packs_finish_text">Downloaded latest graphic packs</string>
    <string name="graphic_packs_no_updates_text">No updates available</string>
    <string name="graphic_packs_download_dialog_title">Graphic packs download</string>
    <string name="expand_graphic_section_description">Expand graphic packs section</string>
    <string name="graphic_pack_section_item_description">Graphic pack section</string>
    <string name="active_preset_category">Active preset</string>
    <string name="graphic_pack_enabled_checkbox_label">Enabled</string>
    <string name="graphic_pack_name">Graphic pack name</string>
    <string name="graphic_pack_description">Graphic pack description</string>
    <string name="graphic_pack_no_description">This graphic pack has no description</string>
    <string name="graphic_pack_icon_description">Graphic pack icon</string>
    <string name="search_graphic_packs_action">Search graphic packs</string>
    <string name="input_mode_edit_size">Edit input size</string>
    <string name="input_mode_edit_position">Edit input positions</string>
    <string name="input_mode_default">Exited input edit mode</string>
    <string name="input_mode_button_description">Change input mode to move/resize or default</string>
    <string name="overlay_controller">Overlay controller</string>
    <string name="input_overlay">Input overlay</string>
    <string name="input_overlay_settings">Input overlay settings</string>
    <string name="enable_input_overlay">Enable input overlay</string>
    <string name="alpha_slider">Inputs opacity</string>
    <string name="configure_input_mode_button_desc">Change the input mode to move position or resize</string>
    <string name="configure_inputs_description">Configure the positions/sizes of the inputs</string>
    <string name="configure_inputs_label">Configure inputs</string>
    <string name="reset_overlay_button_desc">Reset the positions and sizes of the inputs</string>
    <string name="vibrate">Vibrate</string>
    <string name="enable_vibrate_on_touch">Enable vibrate on touch</string>
    <string name="overlay_settings">Overlay settings</string>
    <string name="overlay_position_disabled">Disabled</string>
    <string name="overlay_position_top_left">Top left</string>
    <string name="overlay_position_top_center">Top center</string>
    <string name="overlay_position_top_right">Top right</string>
    <string name="overlay_position_bottom_left">Bottom left</string>
    <string name="overlay_position_bottom_center">Bottom center</string>
    <string name="overlay_position_bottom_right">Bottom right</string>
    <string name="overlay_position">Position</string>
    <string name="overlay">Overlay</string>
    <string name="fps">FPS</string>
    <string name="fps_overlay_description">The number of frames per second. Average over last 5 seconds</string>
    <string name="draw_calls_per_frame">Draw calls per frame</string>
    <string name="draw_calls_per_frame_overlay_description">The number of draw calls per frame. Average over last 5 seconds</string>
    <string name="cpu_usage">CPU usage</string>
    <string name="cpu_usage_overlay_description">CPU usage of Cemu in percent</string>
    <string name="ram_usage">RAM usage</string>
    <string name="ram_usage_overlay_description">Cemu RAM usage in MB</string>
    <string name="vram_usage">VRAM usage</string>
    <string name="vram_usage_description">The VRAM usage of Cemu in MB</string>
    <string name="debug">Debug</string>
    <string name="debug_overlay_description">Displays internal debug information (Vulkan only)</string>
    <string name="notifications">Notifications</string>
    <string name="shader_compiler">Shader compiler</string>
    <string name="shader_compiler_notification_description">Shows a notification after shaders have been compiled</string>
    <string name="controller_profiles">Controller profiles</string>
    <string name="controller_profiles_notification_description">Displays the active controller profile when starting a game</string>
    <string name="friend_list">Friend list</string>
    <string name="friend_list_notification_description">Shows friend list related data if online</string>
    <string name="input_finish_edit_label">Done</string>
    <string name="move_inputs_description">Move inputs</string>
    <string name="resize_inputs_description">Resize inputs</string>
    <string name="reset_input_overlay">Reset input overlay</string>
    <string name="edit_inputs">Edit inputs</string>
    <string name="show_pad">Show pad</string>
    <string name="replace_tv_with_pad">Replace TV with PAD</string>
    <string name="installed_games_title">Installed games</string>
    <string name="enable_motion">Enable motion</string>
    <string name="add_game_path">Add game path</string>
    <string name="remove_game_path">Remove game path</string>
    <string name="game_paths_settings">Game paths</string>
    <string name="game_path_already_added">Game path already added</string>
    <string name="quit">Quit</string>
    <string name="error">Error</string>
    <string name="game_files_unknown_error">Unable to launch game\nPath: %1$s</string>
    <string name="no_disk_key">Could not decrypt title. Make sure that keys.txt contains the correct disc key for this title.</string>
    <string name="no_title_tik">Could not decrypt title because title.tik is missing.</string>
    <string name="game_not_found">Unable to launch game because the base files were not found.</string>
    <string name="failed_create_surface_error">Failed creating surface: %1$s</string>
    <string name="title_name">Title name</string>
    <string name="title_id">Title ID</string>
    <string name="version">Version</string>
    <string name="dlc">DLC</string>
    <string name="title_time_played">You\'ve played</string>
    <string name="title_last_played">Last played</string>
    <string name="title_region">Region</string>
    <string name="enabled_graphic_packs_count">Enabled graphic packs count</string>
    <string name="graphic_pack_is_enabled">Graphic pack is enabled</string>
</resources>