<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gameview.GameDetailsFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/game_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/title_icon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:contentDescription="@string/game_icon"
                    android:scaleType="fitXY"
                    tools:ignore="ImageContrastCheck" />
            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/title_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/game_title_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/title_id"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/version"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/dlc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_dlc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/title_time_played"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_time_played"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/title_last_played"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_last_played"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/title_region"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_region"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>